--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ footer {
   align-items: center;
   justify-content: space-between;
   margin: 10px;
-  padding: 0 20px;
+  padding: 5px 20px;
   position: relative;
   width: 50%;
   height: 60%;
