--- a/style.css
+++ b/style.css
@@ -95,26 +95,44 @@ main {
 
 .card {
   width: 300px;
-  height: 400px;
+  height: 300px;
   margin: 20px;
   text-align: center;
+  position: relative;
+}
+
+.card:hover {
+  height : 320px; 
+  top : -2%;
+  left: 8px;
+  box-shadow : 0 5px 20px rgba(0, 0, 0, 0.507);
+  transition: all 0.6s ease-out;
+  z-index : 1;
 }
 
 .card img {
   width: 100%;
   height: 60%;
   background-position: center;
+  position: relative;
   border-radius: 10px;
 }
 
 .card h2 {
+  width: 70%;
   font-size: 22px;
-  margin-top: 20px;
+  position: absolute;
+  top: 150px;
+  left: 15%;
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.507);
 }
 
 .card p {
   font-size: 16px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -122,6 +140,44 @@ footer {
   width: 100%;
   height: 12.3vh;
   background-color: rgba(10, 10, 10, 0.89);
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-footer {
+  margin: auto;
+  padding: 10px; 
+}
+
+.nav-footer {
+  display: flex;
+  
+}
+
+.nav-footer ul{
+  display: flex;
+  list-style: none;
+}
+
+.nav-footer a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.item a{
+  color: white;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.item a:hover {
+  position: relative;
+  color: chocolate;
+  top: -2%;
+  transition: all 0.6s ease-out;
 }
 
 @media (max-width: 700px) {
@@ -140,27 +196,15 @@ footer {
     align-items: center;
   }
 
-  /* .barra-lateral-izquierda .titulos-busqueda {
-    margin: 10px auto;
-    padding: 10px;
-    position: relative;
-    width: 70%;
-    height: 25vh;
-    background-color: rgba(196, 22, 22, 0.438);
-    border-radius: 10px;
-    text-decoration: none;
-    color: whitesmoke;
-  } */
-
   .barra-lateral-izquierda .titulos-busqueda {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 10px;
-  padding: 5px 20px;
-  position: relative;
-  width: 50%;
-  height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 5px 20px;
+    position: relative;
+    width: 50%;
+    height: 60%;
   }
 
   .titulos-busqueda h3 {
@@ -177,5 +221,9 @@ footer {
 
   .card-container .card {
     width: 100%;
+  }
+
+  .item a{
+    padding: 10px;
   }
 }
